<resources>
    <string name="app_name">lab_1</string>
    <string name="Recipes">Рецепты</string>
    <string name="Language">RU</string>
    <string name="Breakfast">Завтрак</string>
    <string name="Lunch">Обед</string>
    <string name="Dinner">Ужин</string>
    <string name="Back">Назад</string>
    <string name="Rec_1">Манные биточки</string>
    <string name="Rec_2">Шакшука</string>
    <string name="Rec_3">Яблочные оладьи</string>
    <string name="Ingredients">Ингредиенты:</string>
    <string name="Ingredients_1">1) Молоко - 500 мл \n2) Крупа манная - 160 г \n3) Мука - 2 ст. ложки \n4) Яйцо - 1 шт. \n5) Масло растительное - 40 мл \n6) Ванилин - 2 щепотки \n7) Сахар - 60 г \n8) Соль - 1 щепотка</string>
    <string name="Cooking">Приготовление:</string>
    <string name="Cooking_1">1) В кастрюле вскипятите молоко  \n2) Непрерывно помешивая молоко венчиком, тонкой струйкой всыпьте манную крупу. Варите кашу около 3 минут, до загустения. Каша должна получиться густой  \n3) Готовую кашу переложите в миску и оставьте остывать до тёплого состояния  \n4) Затем в манную кашу вбейте яйцо, всыпьте сахар, ванилин и маленькую щепотку соли  \n5) Перемешайте до однородности  \n6) Смоченными в воде руками сформируйте из манного \'теста\' круглую толстенькую лепёшку и обваляйте её в муке  \n7) Таким образом сформируйте остальные биточки \n8) Разогрейте сковороду с растительным маслом и выложите туда часть манных биточков  \n9) Обжарьте биточки на небольшом огне по 3 минуты с каждой стороны, до золотистой корочки  \n10) Таким образом обжарьте все биточки  \n11) Подавайте биточки к столу в горячем, тёплом или остывшем виде, с мёдом, вареньем или сгущёнкойем или сгущёнкой</string>
    <string name="Ingredients_2">1) Яйца - 4 шт \n2) Помидоры - 5 шт \n3) Перец болгарский красный - 1/2 шт \n4) Перец чили свежий - 1/2 шт \n5) Лук репчатый - 1 шт \n6) Чеснок - 3 зубчика \n7) Сахар - 1 ч. ложка \n8) Паприка сладкая молотая - 1 ч. ложка \n 9) Перец черный горошком - 6 шт \n10) Перец белый горошком - 5 шт \n11) Кориандр, зерна - 10 шт \n12) Базилик сухой - 1 ч. ложка \n13) Зелень петрушки (мелко нарезанная) - 1 ч. ложка</string>
    <string name="Cooking_2">1) Сладкий перец мелко нарезать \n2) Измельчить лук \n3) Мелко нарезать чеснок \n4) Острый перец очистить от семян и тоже измельчить \n5) Помидоры нарезать вместе с семенами \n6) Растереть в ступке все специи: два вида перца, кориандр, базилик и паприку \n7) На разогретую сковороду налить растительное масло, обжарить чеснок и горький перец в течение 2-3 минут \n8) Добавить лук \n9) Туда же отправить болгарский перец и 1 ч.ложку сахара \n10) Добавить помидоры. Тушить на маленьком огне 8 минут, добавить все специи и соль \n11) Ложкой в тушеных овощах для каждого яйца сделать небольшое углубление и вылить туда яйца \n 12) Продолжать жарить шакшуку на небольшом огне 5-6 минут, до готовности. Яичный белок должен побелеть, а желток должен остаться жидким \n13) Перед подачей шакшуку посыпать зеленью. Подавать на сковороде</string>
    <string name="Ingredients_3">1) Яблоки - 3 шт \n2) Сахар - 2 ст. ложки \n3) Яйцо - 1 шт \n4) Мука - 4 ст. ложки \n5) Корица молотая - 0,5 ч. ложки \n6) Чеснок - 3 зубчика \n7) Масло растительное - для жарки</string>
    <string name="Cooking_3">1) Яблоки очистить, вырезать сердцевинки. Натереть яблоки на крупной тёрке \n2) Натёртые яблоки переложить в глубокую миску. Всыпать сахар \n3) Добавить к яблокам корицу и яйцо \n4) Перемешать массу \n5) Затем постепенно всыпать муку, хорошо перемешивая лопаткой \n6) Выкладывать яблочное тесто столовой ложкой на хорошо разогретую сковороду с маслом, формируя небольшие оладушки \n7) Жарить яблочные оладьи на небольшом огне по 3 минуты с каждой стороны \n8) Подаём яблочные оладьи с мёдом или сметаной</string>
    <string name="Rec_4">Рулет из скумбрии с черносливом и сыром, запечённый в сметане</string>
    <string name="Rec_5">Лагман с курицей</string>
    <string name="Rec_6">Паста \'Карбонара\'</string>
    <string name="Ingredients_4">1) Скумбрия свежемороженая — 1 шт. \n2) Чернослив вяленый без косточек — 4-6 шт. \n3) Сыр твёрдый — 40 г \n4) Лук репчатый — 80 г (0,5-1 шт.) \n5) Масло сливочное — 20 г \n6) Сметана (жирностью 10 %) — 100 г \n7) Петрушка свежая — несколько веточек \n8) Соль — по вкусу \n9) Перец белый молотый — по вкусу \n10) Мускатный орех молотый — по вкусу</string>
    <string name="Cooking_4">1) Скумбрию заранее размораживаем. Разогреваем духовку до 180 градусов \n2) Чернослив заливаем горячей водой и оставляем, чтобы он стал мягче и пластичнее \n3) Чернослив обсушиваем и нарезаем мелкими кусочками \n4) Скумбрию разрезаем вдоль, удаляем внутренности и хребет. Вынимаем все кости, обрезаем хвост и плавники. Пласт рыбы промываем и обсушиваем бумажными полотенцами. \n5) Пласт скумбрии с внутренней стороны накрываем пищевой плёнкой и аккуратно отбиваем кулинарным молотком, чтобы он стал более плоским и равномерным со всех сторон \n6) Солим и перчим рыбу со всех сторон и оставляем под плёнкой \n7) Лук очищаем и нарезаем мелкими кубиками. Сыр натираем на мелкой тёрке. Петрушку измельчаем. \n8) Обжариваем лук на сливочном масле 5-7 минут, до золотистости и мягкости \n9) Перекладываем лук в форму для запекания. \n10) На рыбу выкладываем сыр и измельчённый чернослив. \n11) Сворачиваем скумбрию в плотный рулет. Закалываем края зубочистками, чтобы рулет держал форму. Выкладываем рулет в форму с луком. \n12) Посыпаем рыбный рулет мускатным орехом и поливаем сметаной. Затем снова посыпаем мускатным орехом, солим и перчим. Ставим форму в разогретую до 180 градусов духовку на 20-25 минут. \n13) Рулет из скумбрии с черносливом и сыром готов. \n14) Посыпаем готовое блюдо свежей петрушкой и подаём к столу.</string>
    <string name="Ingredients_5">1) Лапша - 60 г. \n2) Филе куриное - 300 г. \n3) Помидоры - 2 шт. \n4) Перец болгарский - 1 шт. \n5) Морковь - 2 шт. \n6) Лук репчатый - 1-2 шт. \n7) Томатная паста - 2 ст. ложки \n8) Сахар - 1 ст. ложка \n9) Соль - 3 щепотки \n10) Перец черный молотый - 3 щепотки \n11) Масло растительное - 40 мл</string>
    <string name="Cooking_5">1) Куриное филе промойте, обсушите, удалите пленки и жилы. \n2) Нарежьте куриное филе средними кусочками. Влейте в казан или на сковороду с высокими бортиками растительное масло и разогрейте его. Добавьте туда куриное филе и обжаривайте около 7-10 минут до румяной корочки. \n3) Морковь и лук очистите, вымойте и нарежьте кубиками. Добавьте к курице и обжаривайте еще 5-7 минут до мягкости овощей. \n4) Помидоры и болгарский перец вымойте, удалите из перца семена. Нарежьте овощи средними кубиками и добавьте в сковороду с курицей. Добавьте сахар и 2 щепотки соли. Перемешайте и тушите куриное филе с овощами около 15 минут на среднем огне. \n5) В это время вскипятите воду в кастрюле, всыпьте щепотку соли и отварите лапшу до готовности, примерно 7-10 минут. Затем откиньте лапшу на дуршлаг и верните обратно в кастрюлю. \n6) Добавьте к курице с овощами томатную пасту, молотый черный перец. Влейте 0,5 стакана воды, аккуратно все перемешайте. Тушите ровно 5 минут. (При желании можно добавить промытую и измельченную зелень.) \n7) Выложите в глубокие тарелки отварную лапшу, на нее - подливу с курицей и овощами. Украсьте лагман с курицей зеленью и сразу же подавайте к столу!</string>
    <string name="Ingredients_6">1) Спагетти - 400 г. \n2) Грудинка варено-копчёная - 200 г. \n3) Яйцо куриное - 1 шт. \n4) Желтки - 3 шт. \n5) Сыр пармезан - 75 г. \n6) Масло сливочное - 2 ст.ложки \n7) Масло оливковое - 1 ст.ложка \n8) Чеснок - 2 зубчика \n9) Соль - по вкусу \n10) Перец черный - по вкусу</string>
    <string name="Cooking_6">1) Нарезать грудинку мелкими кубиками. \n2) Разогреть сковороду, растопить 1 ст. ложку сливочного масла и отправить туда грудинку. Добавить 2 зубчика чеснока, предварительно раздавленных ножом. Грудинку обжаривать на маленьком огне 10 минут, из неё должен вытопиться жир, но она должна остаться мягкой. После обжаривания чеснок убрать. \n3) В кипящую воду добавляем 1 ст. ложку соли, 1 ст. ложку оливкового масла и спагетти. Варим так, как указано на упаковке спагетти, - важно соблюдать указанное время варки, чтобы сварить спагетти правильно. \n4) У трёх яиц отделить белки от желтков. Отправить в миску 3 желтка и одно яйцо с белком, посолить и поперчить (по 1 щепотке), хорошо взбить и добавить 2 ст. ложки натертого сыра. Перемешать. \n5) Готовые спагетти откинуть на дуршлаг, предварительно оставив 1,5 стакана воды, в которой они варились. \n6) Выключить огонь под сковородой с грудинкой, отправить туда спагетти, добавить 1 ст. ложку сливочного масла и вылить взбитые яйца с сыром. \n7) Все тщательно перемешать, постепенно добавить 1 стакан воды от спагетти и 2 ст. ложки сыра, постоянно перемешивая, чтобы яйца не свернулись. \n8) Распределить спагетти по тарелкам, сверху добавить грудинку, посыпать черным молотым перцем и тертым сыром. Паста карбонара готова.</string>
    <string name="Rec_7">Жюльен с курицей и грибами</string>
    <string name="Rec_8">Джамбалайя</string>
    <string name="Rec_9">Запеканка \'Тающая во рту нежность\'</string>
    <string name="Ingredients_7">1) Филе куриное - 400 г. \n2) Грибы шампиньоны - 300 г. \n3) Лук репчатый - 100 г. \n4) Сливки 20-30% - 200 мл. \n5) Сыр твердый - 150 г. \n6) Масло растительное - 2 ст. ложки \n7) Соль - по вкусу \n8) Перец черный молотый - по вкусу \n9) Соль - по вкусу \n10) Зелень (базилик или салатные листья) - для украшения</string>
    <string name="Cooking_7">1) Куриное филе нарежьте небольшими кусочками. \n2) Курицу обжарьте на растительном масле несколько минут до полуготовности. Лук мелко нарежьте, добавьте к курице и жарьте куриное филе с луком еще 3-4 минуты. \n3) Шампиньоны крупно нарежьте и добавьте в сковороду. После того, как выпарится влага из грибов, посолите, поперчите и готовьте курицу с луком и грибами еще 5-7 минут, до золотистого цвета. \n4) Залейте мясо и грибы сливками, немного прогрейте всё вместе. \n5) Сыр натрите на крупной терке и выложите сверху. Выключите огонь и накройте сковороду крышкой. \n6) Когда через 3-5 минут сыр расплавится, жюльен с грибами и курицей можно подавать к столу. \n7) Если ваша сковорода позволяет, украсьте жульен с курицей листиками базилика и подавайте к столу прямо в этой посуде.</string>
    <string name="Ingredients_8">1) Сосиски (желательно подкопчённые или копчёные) - 400 г. \n2) Рис - 350 г. \n3) Лук репчатый - 1 шт. \n4) Перец болгарский - 200 г. \n5) Помидоры - 300 г. \n6) Чеснок - 2 зубчика \n7) Томатная паста - 1 ст. ложка \n8) Масло растительное - 60 мл \n9) Петрушка свежая - 1 пучок \n10) Соль - по вкусу \n11) Перец чёрный молотый - по вкусу</string>
    <string name="choose_your_language">Choose your language</string>
    <string name="Russian">Русский</string>
    <string name="English">English</string>
    <string name="Japanese">日本語</string>
    <string name="Fry_the_fillet_until_golden_brown">Обжариваем филе до румяной корочки</string>
    <string name="Add_vegetables_and_fry_further">Добавляем овощи и жарим дальше</string>
    <string name="Stir_and_simmer">Перемешиваем и тушим</string>
    <string name="Cooking_noodles">Варим лапшу</string>
    <string name="Lets_simmer_everything_together">Тушим всё вместе</string>
</resources>