<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FifthActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/back_to_lunch"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Back"
                android:layout_alignParentStart="true" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="240sp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal"
                android:text="@string/Rec_5"
                android:textSize="20sp"
                android:layout_centerVertical="true"/>

            <Button
                android:id="@+id/language_main"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Language"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/fifth"
            android:adjustViewBounds="true"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="7sp"
            android:layout_marginTop="7sp"
            android:layout_marginBottom="5sp"
            android:textSize="16sp"
            android:text="@string/Ingredients"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:text="@string/Ingredients_5"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="7sp"
            android:layout_marginTop="7sp"
            android:layout_marginBottom="5sp"
            android:textSize="16sp"
            android:text="@string/Cooking"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20sp"
                    android:text="@string/Cooking_5"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20sp">

                    <Button
                        android:id="@+id/timer_btn_5_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Fry_the_fillet_until_golden_brown"/>

                    <TextView
                        android:id="@+id/text_5_1"
                        android:layout_marginStart="10sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="10:00"
                        android:textSize="20sp"
                        android:layout_gravity="center_vertical"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20sp">

                    <Button
                        android:id="@+id/timer_btn_5_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Add_vegetables_and_fry_further"/>

                    <TextView
                        android:id="@+id/text_5_2"
                        android:layout_marginStart="10sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="05:00"
                        android:textSize="20sp"
                        android:layout_gravity="center_vertical"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20sp">

                    <Button
                        android:id="@+id/timer_btn_5_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Stir_and_simmer"/>

                    <TextView
                        android:id="@+id/text_5_3"
                        android:layout_marginStart="10sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="15:00"
                        android:textSize="20sp"
                        android:layout_gravity="center_vertical"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20sp">

                    <Button
                        android:id="@+id/timer_btn_5_4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Cooking_noodles"/>

                    <TextView
                        android:id="@+id/text_5_4"
                        android:layout_marginStart="10sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="10:00"
                        android:textSize="20sp"
                        android:layout_gravity="center_vertical"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20sp">

                    <Button
                        android:id="@+id/timer_btn_5_5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Lets_simmer_everything_together"/>

                    <TextView
                        android:id="@+id/text_5_5"
                        android:layout_marginStart="10sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="05:00"
                        android:textSize="20sp"
                        android:layout_gravity="center_vertical"/>
                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>